--- a/orders/templates/orders/order_form.html
+++ b/orders/templates/orders/order_form.html
@@ -1125,6 +1125,10 @@ function saveOrderWithElectronicContract() {
                     <option value="snap">كبس</option>
                 </select>
             </div>
+            <div class="col-12 mt-2">
+                <label class="form-label">ملاحظات (اختياري)</label>
+                <textarea class="form-control fabric-notes-input" rows="2" placeholder="أضف ملاحظات حول القماش..."></textarea>
+            </div>
         </div>
     </div>
 </template>
